add publications-page and services-pages

--- a/about.html
+++ b/about.html
@@ -73,9 +73,9 @@
                     <div class="nav_list">
                         <a href="./about.html" target="_self" class="nav_list_link nav_list_link_wbg
                         nav_list_link_wbg_active">про нас</a>
-                        <a href="#" target="_self" class="nav_list_link nav_list_link_wbg">послуги</a>
+                        <a href="./services.html" target="_self" class="nav_list_link nav_list_link_wbg">послуги</a>
                         <a href="./team.html" target="_self" class="nav_list_link nav_list_link_wbg">команда</a>
-                        <a href="#" target="_self" class="nav_list_link nav_list_link_wbg">публікації</a>
+                        <a href="./publications.html" target="_self" class="nav_list_link nav_list_link_wbg">публікації</a>
                         <a href="./contacts.html" target="_self" class="nav_list_link nav_list_link_wbg">контакти</a>
                     </div>
                 </nav>
