--- a/contacts.html
+++ b/contacts.html
@@ -57,7 +57,7 @@
                                 <source srcset="./img/Slash-l.svg" media="(max-width: 500px)"> 
                                 <img src="./img/Slash.svg" alt="HLEGALS" class="logo_min_img">
                             </picture>
-                            <p class="page-name">команда</p>
+                            <p class="page-name">контакти</p>
                             <picture>   
                                 <source srcset="./img/SymbolSlash_l.svg" media="(max-width: 500px)"> 
                                 <img src="./img/SymbolSlash.svg" alt="HLEGALS" class="logo_min_img">
@@ -72,9 +72,9 @@
                     </div>
                     <div class="nav_list">
                         <a href="./about.html" target="_self" class="nav_list_link nav_list_link_wbg">про нас</a>
-                        <a href="#" target="_self" class="nav_list_link nav_list_link_wbg">послуги</a>
+                        <a href="./services.html" target="_self" class="nav_list_link nav_list_link_wbg">послуги</a>
                         <a href="./team.html" target="_self" class="nav_list_link nav_list_link_wbg ">команда</a>
-                        <a href="#" target="_self" class="nav_list_link nav_list_link_wbg">публікації</a>
+                        <a href="./publications.html" target="_self" class="nav_list_link nav_list_link_wbg">публікації</a>
                         <a href="./contacts.html" target="_self" class="nav_list_link nav_list_link_wbg nav_list_link_wbg_active">контакти</a>
                     </div>
                 </nav>
@@ -128,10 +128,7 @@
     <section class="page4_section2">
         <div class="map">
             <a id="map"></a>
-            <picture class="map_picture">   
-                <source srcset="./img/Map-l.jpg" media="(max-width: 376px)">
-                <img src="./img/Map.jpg" alt="photo" class="map_picture_img">
-            </picture>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2749.638467472375!2d30.737941415465194!3d46.43604497912437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c63396894457b7%3A0x7f6c5236cbcb70c8!2z0JDQtNC80LjRgNCw0LvRjNGB0LrQuNC5INC_0YDQvtGB0L8uLCAzLCDQntC00LXRgdGB0LAsINCe0LTQtdGB0YHQutCw0Y8g0L7QsdC70LDRgdGC0YwsIDY1MDAw!5e0!3m2!1sru!2sua!4v1650368083406!5m2!1sru!2sua" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
     <footer class="footer">
